--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "ink-asciify-image",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Asciify image component for Ink.",
   "main": "dist/index.js",
   "types": "types/",
   "type": "module",
   "scripts": {
     "pre": "printf \"Initialize dependencies...\\n\"&&npm i&&printf \"\\n\"&&node ./tools/hack.mjs",
-    "build": "printf \"🗑️ Clean up old files:\\n\\n\"&&rm -vrf ./dist ./types&&printf \"\\n💿 Initialize distributable files:\\n\\n\"&&babel ./src --out-dir ./dist --no-comments&&printf \"\\n🧩 Generate bundle files:\\n\"&&rollup -c&&printf \"\\n🔧 Fix buggy files:\\n\\n\"&&node ./tools/fix.mjs&&printf \"\\n💡 Generate type files:\\n\\n\"&&tsc ./src/index.js ./src/components/InkAsciifyImage/index.jsx ./src/utils/image.js --allowJs --declaration --emitDeclarationOnly --esModuleInterop --extendedDiagnostics --module nodenext --moduleResolution nodenext --outDir types --removeComments"
+    "build": "rm -vrf ./dist ./types&&printf \"\\n\"&&babel ./src --out-dir ./dist --no-comments&&rollup -c&&rollup -c&&printf \"\\n\"&&rm -vf ./buildCache4Regulate&&printf \"\\n\"&&tsc ./src/index.js ./src/components/InkAsciifyImage/index.jsx ./src/utils/image.js --allowJs --declaration --emitDeclarationOnly --esModuleInterop --extendedDiagnostics --module nodenext --moduleResolution nodenext --outDir types --removeComments"
   },
   "repository": {
     "type": "git",
@@ -30,8 +30,6 @@
   "devDependencies": {
     "@babel/cli": "^7.22.10",
     "@babel/preset-react": "^7.22.5",
-    "@rollup/plugin-commonjs": "^25.0.4",
-    "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.2.1",
     "@rollup/plugin-terser": "^0.4.3",
     "@types/node": "^20.5.7",
@@ -43,6 +41,7 @@
     "jimp": "^0.22.10",
     "prettier-eslint": "^15.0.1",
     "rollup": "^3.28.1",
+    "rollup-plugin-cjs-es": "^2.0.0",
     "typescript": "^5.2.2"
   },
   "peerDependencies": {
@@ -51,6 +50,8 @@
     "synckit": ">=0.8.5"
   },
   "overrides": {
+    "magic-string": "^0.30.2",
+    "pngjs": "6.0.0",
     "xml2js": "^0.5.0"
   }
 }
